[gd_scene load_steps=4 format=3 uid="uid://ci2o2k7kweev6"]

[ext_resource type="Texture2D" uid="uid://c57w1yed8pb5y" path="res://assets/menus/pausemenu/pause_button.png" id="1_f3hvl"]
[ext_resource type="Script" path="res://game/menus/pause_menu.gd" id="1_k82v0"]
[ext_resource type="Texture2D" uid="uid://t2nhrwxjt1w0" path="res://assets/menus/pausemenu/pause_symbol.png" id="2_drc5k"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_k82v0")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 14.0
offset_top = 14.0
offset_right = 42.0
offset_bottom = 42.0
texture_normal = ExtResource("1_f3hvl")

[node name="PauseSymbol" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -94.5
offset_right = 94.5
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_drc5k")

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
